# eyoDo

.github/: copilot-instructions.md
eyodo-api/: .gitignore  Cargo.toml  docker-compose.yml  eyodo.db  makefile
eyodo-api/.github/: copilot-instructions.md
eyodo-api/.sqlx/: query-4a82fb19847e073d04642cb520d7ca568377010219c608d5c6a8d43811f2820f.json  query-5e2e6661c5d5f2fdcad1e8843e09d141e6db727cdaa035b91ec4447ea754a446.json  query-9f112d7b7ee693ddf2ed5b07e942f7712e23cc2f0b1e5937f219d66ab17d442e.json
eyodo-api/migrations/: 20260703120143_init_schema.sql
eyodo-api/src/: db.rs  error.rs  main.rs
eyodo-api/src/features/: mod.rs
eyodo-api/src/features/test/: handler.rs  mod.rs  model.rs  model_joined.rs  model_response.rs  repository.rs  router.rs  service.rs
eyodo-api/src/features/todo/: handler.rs  mod.rs  model.rs  model_joined.rs  model_response.rs  repository.rs  router.rs  service.rs
eyodo-api/src/features/user/: handler.rs  model.rs  model_response.rs  repository.rs  router.rs  service.rs
eyodo-app/: package.json
eyodo-app/src/app/: layout.tsx  page.tsx
eyodo-app/src/app/components/: Header.tsx  Modal.tsx  Providers.tsx  Sidebar.tsx
eyodo-app/src/app/taches/: api.ts
eyodo-app/src/app/taches/components/: AddTaskForm.tsx  TaskCard.tsx  TaskTable.tsx  ValidCompletedTask.tsx
eyodo-app/src/app/taches/en-cours/: page.tsx
eyodo-app/src/app/taches/hooks/: useCompleteTask.ts  useCreateTask.ts  useTasks.ts
eyodo-app/src/app/taches/terminees/: page.tsx
eyodo-app/src/app/taches/types/: Task.ts
